--- a/source/_posts/Java/反射/动态代理.md
+++ b/source/_posts/Java/反射/动态代理.md
@@ -27,7 +27,7 @@ public interface InvocationHandler {
 
 InvocationHandler 接口只有一个 `invoke` 方法，该方法参数作用如下：
 
-- proxy：代理后的实力对象
+- proxy：代理后的实例对象
 - method：被代理实例被调用的方法
 - args：调用 method 时的参数
 
